# hw_17

./: README.md  helpers.py  pyproject.toml
schemas/: shemas.py
tests_reqres/: test_api_reqres.py
