[project]
name = "hw-17"
version = "0.1.0"
description = ""
authors = [
    {name = "rmg-qa",email = "gorohovikroman123@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "selene (==2.0.0rc2)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "faker (>=37.12.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
